[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Card.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Overview.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/neodgm_pro.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/icon.png" type="Texture" id=5]
[ext_resource path="res://scenes/TopPanel.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.266667, 0.141176, 0.654902, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 4 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.85098, 0.898039, 0.972549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverviewBackground" type="Panel" parent="."]
anchor_bottom = 1.0
margin_right = 282.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 9.0
margin_top = 10.0
margin_right = 283.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "Covid-19 Today"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Label"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overview" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 71.0
margin_right = 10.0
margin_bottom = 71.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 305.0
margin_top = 20.0
margin_right = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 950.0
margin_bottom = 1768.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 950.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "누적"

[node name="TotalPanel" type="Panel" parent="ScrollContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 950.0
margin_bottom = 214.0
grow_horizontal = 2
rect_min_size = Vector2( 950, 170 )
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer/TotalPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
grow_horizontal = 2
custom_constants/hseparation = 0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card" parent="ScrollContainer/VBoxContainer/TotalPanel/GridContainer" instance=ExtResource( 2 )]
margin_right = 230.0

[node name="Card2" parent="ScrollContainer/VBoxContainer/TotalPanel/GridContainer" instance=ExtResource( 2 )]
margin_left = 230.0
margin_right = 460.0

[node name="Card3" parent="ScrollContainer/VBoxContainer/TotalPanel/GridContainer" instance=ExtResource( 2 )]
margin_left = 460.0
margin_right = 690.0

[node name="Card4" parent="ScrollContainer/VBoxContainer/TotalPanel/GridContainer" instance=ExtResource( 2 )]
margin_left = 690.0
margin_right = 920.0

[node name="Dummy" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 950.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 3 )

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 262.0
margin_right = 950.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 3 )
text = "현재"

[node name="NowPanel" type="Panel" parent="ScrollContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 950.0
margin_bottom = 476.0
grow_horizontal = 2
rect_min_size = Vector2( 950, 170 )
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer/NowPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 30.0
margin_right = 15.0
margin_bottom = 10.0
grow_horizontal = 2
custom_constants/hseparation = 0
columns = 4
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Card" parent="ScrollContainer/VBoxContainer/NowPanel/GridContainer" instance=ExtResource( 2 )]
margin_right = 230.0

[node name="Card2" parent="ScrollContainer/VBoxContainer/NowPanel/GridContainer" instance=ExtResource( 2 )]
margin_left = 230.0
margin_right = 460.0

[node name="Card3" parent="ScrollContainer/VBoxContainer/NowPanel/GridContainer" instance=ExtResource( 2 )]
margin_left = 460.0
margin_right = 690.0

[node name="Card4" parent="ScrollContainer/VBoxContainer/NowPanel/GridContainer" instance=ExtResource( 2 )]
margin_left = 690.0
margin_right = 920.0

[node name="Dummy2" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 480.0
margin_right = 950.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 524.0
margin_right = 950.0
margin_bottom = 564.0
custom_fonts/font = SubResource( 3 )
text = "지역별"

[node name="LocalPanel" type="Panel" parent="ScrollContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 568.0
margin_right = 950.0
margin_bottom = 1768.0
grow_horizontal = 2
rect_min_size = Vector2( 950, 1200 )
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Container" type="GridContainer" parent="ScrollContainer/VBoxContainer/LocalPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
